--- a/config/os/macos/hold/base.dtsi
+++ b/config/os/macos/hold/base.dtsi
@@ -1,5 +1,5 @@
-HR_HOLD(BAS, RS, mp_mi_n)  //hm_BAS_RS
-HR_HOLD(BAS, RA, mp_mi_e)  //hm_BAS_RA
-HR_HOLD(BAS, LC, mp_mi_a)  //hm_BAS_LC
-HR_HOLD(BAS, RC, mp_mi_i)  //hm_BAS_RC
-HR_HOLD(BAS, RG, mp_mi_o)  //hm_BAS_RG
+HR_HOLD(BAS, RS, mp_locale_n)  //hm_BAS_RS
+HR_HOLD(BAS, RA, mp_locale_e)  //hm_BAS_RA
+HR_HOLD(BAS, LC, mp_locale_a)  //hm_BAS_LC
+HR_HOLD(BAS, RC, mp_locale_i)  //hm_BAS_RC
+HR_HOLD(BAS, RG, mp_locale_o)  //hm_BAS_RG
